src/objects/Apttus_Config2__ConstraintRule__c.object
<CustomObject>
    <description>Captures information about configuration constraint rule</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Represent whether the rule is active. If unchecked rule is not applied during configuration.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConditionAssociation__c</fullName>
        <description>Represents condition association using sequence number in AND / OR operator based expression. For example ((1 AND 2) OR (3 AND 4)) when there are four conditions added to the rule.</description>
        <inlineHelpText>For example ((1 AND 2) OR (3 AND 4)) when there are four conditions added to the rule.</inlineHelpText>
        <label>Condition Association</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>Used for administrative description of the rule.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>Start date when the rule will be effective. Leave this blank for always effective requirement.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>End date when rule will stop triggering. Leave this blank for always effective rule.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsBundleContext__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the constraint rule will be evaluated within a bundle context.</description>
        <inlineHelpText>When checked all of the rule conditions will be evaluated within a bundle context.</inlineHelpText>
        <label>Is Bundle Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInAsset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conditions are evaluated against the products found in asset.</description>
        <label>Match In Asset (DEPRECATED)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conditions are evaluated against the products added as options.</description>
        <label>Match In Options (DEPRECATED)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInPrimaryLines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Conditions are evaluated against products added as primary lines.</description>
        <label>Match In Primary Lines (DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchMaxProducts__c</fullName>
        <description>Used by match rule as the max limit</description>
        <label>Match Max Products (DEPRECATED</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchMinProducts__c</fullName>
        <description>Used by the match rule as min limit</description>
        <label>Match Min Products (DEPRECATED</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchRule__c</fullName>
        <label>Match Rule (DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match Any in Group</fullName>
                </value>
                <value>
                    <fullName>Match All in Group</fullName>
                </value>
                <value>
                    <fullName>Match Min/Max</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>Used by condition expression</description>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UpdateView__c</fullName>
        <description>Update View button displays Product Constraint View page</description>
        <formula>HYPERLINK(&quot;/apex/Apttus_Config2__ProductConstraintView?ruleId=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Config2__Button_UpdateView&quot;, &quot;Update View&quot;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update View</label>
        <type>Text</type>
    </fields>
    <label>Constraint Rule</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__Active__c</columns>
        <columns>Apttus_Config2__ConditionAssociation__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Constraint Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Constraint Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>